--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ layout: 'base.njk'
 
             <div class="flex-group">
                 <a href="#featured-articles" class="btn btn--primary">Featured articles</a>
-                <a href="/pages/blogs/" class="btn btn--neutral">Most recent articles</a>
+                <a href="/pages/recent-articles" class="btn btn--neutral">Most recent articles</a>
             </div>
         </div>
         <div>
@@ -31,7 +31,7 @@ layout: 'base.njk'
         </div>
     </section>
 
-    <section class="featured-content-panel">
+    <section class="featured-content-panel" id="featured-articles">
         <section  class="featured-articles">
             <h3 class="section-title">Featured articles</h3>
             <p class="t-align-center">Here is a list of articles which I feel can give you a good idea of what this blog site is all about.</p>
