modified the nav bar.

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,4 +1,4 @@
-<div class="nav-bar">
+<!--<div class="nav-bar">
     <header>
         <div><h1>Beautiful Zambia</h1> 
         </div>
@@ -10,4 +10,20 @@
             <li><a href="#sub-footer">Contact Us</a></li>
         </ul>
     </nav>       
+</div>-->
+
+<div class="navbar">
+    <header class="brand-title"><h1><a href="/">Beautiful Zambia</a></h1></header>
+    <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <nav class="navbar-links">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/pages/recent-articles">Blog</a></li>
+            <li><a href="#sub-footer">Contact Us</a></li>
+        </ul>
+    </nav>
 </div>
