added google ads

--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -7,6 +7,18 @@ layout: "base.njk"
             <figure><img src="/assets/Logo_1495199470265.png" alt="beautiful zambia"></figure> 
         </div>
     </section>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7587764121279484"
+     crossorigin="anonymous"></script>
+    <!-- horizontal ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-7587764121279484"
+        data-ad-slot="5794985680"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <section class="individual-article">
         <div>
             <div>
