--- a/src/index.njk
+++ b/src/index.njk
@@ -31,6 +31,19 @@ layout: 'base.njk'
         </div>
     </section>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7587764121279484"
+        crossorigin="anonymous"></script>
+    <!-- horizontal ads -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-7587764121279484"
+        data-ad-slot="5794985680"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <section class="featured-content-panel" id="featured-articles">
         <section  class="featured-articles">
             <h3 class="section-title">Featured articles</h3>
