modified the file

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -5,7 +5,7 @@
             <li><a href="https://www.facebook.com/BeautifulZambia/" rel="nofollow" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
             <li><a href="https://www.instagram.com/beautiful_zambia/" rel="nofollow" target="_blank"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://twitter.com/BeautifulZambia?s=07" rel="nofollow" target="_blank"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://wa.me/260967784098?text=Hello%20Beautiful%Zambia%I%just%visited%your%blog%site." rel="nofollow" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+            <li><a href="https://wa.me/260967784098?text=Hello%20Beautiful%20Zambia%20I%20just%20visited%20your%20blog%20site." rel="nofollow" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
             <li><a href="mailto:nawasibongo@gmail.com" rel="nofollow"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </div>
